[package]
name = "vault"
version = "0.1.0"
description = "Solana Vault for managed liquidity on Raydium CLMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Use for devnet deployment. Propagates to raydium-clmm-cpi so
# raydium_clmm_cpi::id() resolves to the devnet CLMM program
# (DRayAUgENGQBKVaX8owNhgzkEDyoHTGVEGHVJT1E9pfH) instead of mainnet CAMMCzo...,
# which the open/close/swap `address = raydium_clmm_cpi::id()` constraints check.
devnet = ["raydium-clmm-cpi/devnet"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

# Raydium CLMM CPI for swaps (branch for anchor 0.31.1)
raydium-clmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", branch = "anchor-0.31.1", package = "raydium-clmm-cpi" }

# Pin versions to avoid incompatibility with Solana platform-tools rustc 1.75
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"

# Full 256-bit integer for bit-exact CLMM math (same crate Raydium/Uniswap use).
uint = { version = "0.9.5", default-features = false }
